--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "supertest": "^6.2.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3"
