--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   }
 }
