--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
-API_URL=http://localhost
-PORT=7890
+DATABASE_URL=
+API_URL=
+PORT=
+COOKIE_NAME=
+JWT_SECRET=
+SALT_ROUNDS=
