--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "elliptic": "^6.5.4",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
