--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
