added crypto list to app.js. updated .env file and yml

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,3 +21,4 @@ jobs:
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
         COOKIE_NAME: ${{ secrets.COOKIE_NAME }}
         SALT_ROUNDS: ${{ secrets.SALT_ROUNDS }}
+        CRYPTO_LIST_KEY: ${{ secrets.CRYPTO_LIST_KEY }}
